--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/CreateOrUpdatePipelines.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/CreateOrUpdatePipelines.mustache
@@ -1,6 +1,6 @@
 using System.Diagnostics.CodeAnalysis;
-using EdFi.Ods.Api.Pipelines;
-using EdFi.Ods.Pipelines.Factories;
+using EdFi.Ods.Api.Common.Infrastructure.Pipelines.CreateOrUpdate;
+using EdFi.Ods.Api.Common.Infrastructure.Pipelines.Factories;
 {{#RenderGroups}}
 
 namespace {{Namespace}}
