--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/EntitiesForQueriesViews.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/EntitiesForQueriesViews.mustache
@@ -1,6 +1,6 @@
 using System;
 using System.Diagnostics.CodeAnalysis;
-using EdFi.Ods.Api.NHibernate.Architecture;
+using EdFi.Ods.Api.Common.Dtos;
 
 // Views
 namespace {{Namespace}}
@@ -38,7 +38,6 @@ namespace {{Namespace}}
         //              External references for HQL Queries
         // -------------------------------------------------------------
         // -------------------------------------------------------------
-    } 
+    }
     {{/Classes}}
 }
-
