--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/EntityInterfaces.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/EntityInterfaces.mustache
@@ -1,11 +1,12 @@
 using System;
 using System.Collections.Generic;
-using EdFi.Ods.Api.Models;
+using EdFi.Ods.Api.Common.Attributes;
 using EdFi.Ods.Common;
+
 #pragma warning disable 108,114
 
 namespace {{EntitiesBaseNamespace}}
-{ 
+{
 {{#Interfaces}}
 
     /// <summary>
