--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/MultiYear_0030_ForeignKeys__AttributeTable.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/MultiYear_0030_ForeignKeys__AttributeTable.mustache
@@ -1,5 +1,9 @@
 -- Foreign key from entity identity table
 ALTER TABLE {{Schema}}.{{TableName}}_Attributes WITH CHECK ADD CONSTRAINT FK_{{TableName}}_Attributes FOREIGN KEY
-(HashKey{{#IdentifyingReferences}}{{#Column}}, {{ColumnName}}{{/Column}}{{/IdentifyingReferences}}) REFERENCES {{Schema}}.{{TableName}} (HashKey{{#ContextualPrimaryKeyColumns}}, {{ColumnName}}{{/ContextualPrimaryKeyColumns}})
+{{#IsAggregateRoot}}
+(HashKey) REFERENCES {{Schema}}.{{TableName}} (HashKey)
+{{/IsAggregateRoot}}
+{{^IsAggregateRoot}}
+(HashKey{{#IdentifyingReferences}}{{#Column}}, {{ColumnName}}{{/Column}}{{/IdentifyingReferences}}{{#ContextualPrimaryKeyColumns}}, {{ColumnName}}{{/ContextualPrimaryKeyColumns}}) REFERENCES {{Schema}}.{{TableName}} (HashKey{{#IdentifyingReferences}}{{#Column}}, {{ColumnName}}{{/Column}}{{/IdentifyingReferences}}{{#ContextualPrimaryKeyColumns}}, {{ColumnName}}{{/ContextualPrimaryKeyColumns}})
+{{/IsAggregateRoot}}
 GO
-
