--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/MultiYear_0025_PopulateTables.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/MultiYear_0025_PopulateTables.mustache
@@ -31,10 +31,17 @@ BEGIN
         {{#PrimaryKeyColumns}}
         , {{ColumnName}}
         {{/PrimaryKeyColumns}}
-    FROM EdFi_Ods_Populated_Template.{{Schema}}.{{TableName}}
-    -- GO
-
+    FROM EdFi_Ods_2021.{{Schema}}.{{TableName}} source
+    WHERE NOT EXISTS (
+        SELECT 1 FROM {{Schema}}.{{TableName}} target 
+        WHERE target.HashKey = HASHBYTES('sha1',
+        {{#PrimaryKeyColumns}}
+            {{^IsFirst}}+ '|' + {{/IsFirst}}{{> MultiYear_0025_PopulateTables__HashPartFromSource }}
+        {{/PrimaryKeyColumns}}
+            )
+    )
         {{#HasNonKeyColumnsOrReferences}}
+
     {{> MultiYear_0025_PopulateTables__AttributeTable}}
         {{/HasNonKeyColumnsOrReferences}}
 
@@ -71,10 +78,30 @@ BEGIN
         {{#ContextualPrimaryKeyColumns}}
             , {{ColumnName}}
         {{/ContextualPrimaryKeyColumns}}
-    FROM EdFi_Ods_Populated_Template.{{Schema}}.{{TableName}}
-    -- GO
+    FROM EdFi_Ods_2021.{{Schema}}.{{TableName}} source
+    WHERE NOT EXISTS (
+        SELECT 1 FROM {{Schema}}.{{TableName}} target 
+        WHERE target.HashKey = HASHBYTES('sha1',
+        {{#ParentPrimaryKeyColumns}}
+            {{^IsFirst}}+ '|' + {{/IsFirst}}{{> MultiYear_0025_PopulateTables__HashPartFromSource }}
+        {{/ParentPrimaryKeyColumns}}
+            )
+        {{#IdentifyingReferences}}
+            AND target.{{#Column}}{{ColumnName}}{{/Column}} = HASHBYTES('sha1',
+            {{#ReferenceColumns}}
+                {{^IsFirst}}+ '|' + {{/IsFirst}}{{> MultiYear_0025_PopulateTables__HashPartFromSource }}
+            {{/ReferenceColumns}}
+            )
+        {{/IdentifyingReferences}}
+        {{#ContextualPrimaryKeyColumns}}
+            {{#ContextualPrimaryKeyColumns}}
+            AND target.{{ColumnName}} = source.{{ColumnName}}
+            {{/ContextualPrimaryKeyColumns}} 
+        {{/ContextualPrimaryKeyColumns}}
+    )
 
         {{#HasNonKeyColumnsOrReferences}}
+
     {{> MultiYear_0025_PopulateTables__AttributeTable}}
 
         {{/HasNonKeyColumnsOrReferences}}
