--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/MultiYear_0025_PopulateTables__AttributeTable.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/MultiYear_0025_PopulateTables__AttributeTable.mustache
@@ -1,78 +1,130 @@
-    INSERT INTO {{Schema}}.{{TableName}}_Attributes (
-        HashKey
-        , SchoolYearContext
-        {{^IsAggregateRoot}}
+    MERGE {{Schema}}.{{TableName}}_Attributes AS target
+    USING EdFi_Ods_2021.{{Schema}}.{{TableName}} AS source
+    ON (target.HashKey = HASHBYTES('sha1',
+    {{#ParentPrimaryKeyColumns}}
+        {{^IsFirst}}+ '|' + {{/IsFirst}}{{> MultiYear_0025_PopulateTables__HashPartFromSource }}
+    {{/ParentPrimaryKeyColumns}}
+        )
+        AND target.SchoolYearContext = @schoolYearContext
+    {{^IsAggregateRoot}}
         -- Identifying references
         {{#IdentifyingReferences}}
-            {{#Column}}
-        , {{ColumnName}}
-            {{/Column}}
-        {{/IdentifyingReferences}}
-        {{/IsAggregateRoot}}
-        {{#HasContextualPrimaryKeyColumns}}
-        -- Contextual primary key
-            {{#ContextualPrimaryKeyColumns}}
-        , {{ColumnName}}
-            {{/ContextualPrimaryKeyColumns}}
-        {{/HasContextualPrimaryKeyColumns}}
-        {{#HasNonKeyColumns}}
-        -- Attributes
-            {{#NonKeyColumns}}
-        , {{ColumnName}}
-            {{/NonKeyColumns}}
-        {{/HasNonKeyColumns}}
-        {{#HasReferences}}
-        -- References
-            {{#References}}
-                {{#Column}}
-        , {{ColumnName}}
-                {{/Column}}
-            {{/References}}
-        {{/HasReferences}}
-        -- Boilerplate columns
-        {{#BoilerplateColumns}}
-        , {{ColumnName}}
-        {{/BoilerplateColumns}})
-    SELECT
-        HASHBYTES('sha1', 
-        {{#PrimaryKeyColumns}}
-            {{^IsFirst}}+ '|' + {{/IsFirst}}{{> MultiYear_0025_PopulateTables__HashPart }}
-        {{/PrimaryKeyColumns}})
-        , @schoolYearContext
-        {{^IsAggregateRoot}}
-        -- Identifying references
-        {{#IdentifyingReferences}}
-        , HASHBYTES('sha1', 
+        AND target.{{#Column}}{{ColumnName}}{{/Column}} = HASHBYTES('sha1',
             {{#ReferenceColumns}}
-            {{^IsFirst}}+ '|' + {{/IsFirst}}{{> MultiYear_0025_PopulateTables__HashPart }}
+            {{^IsFirst}}+ '|' + {{/IsFirst}}{{> MultiYear_0025_PopulateTables__HashPartFromSource }}
             {{/ReferenceColumns}}
         )
         {{/IdentifyingReferences}}
-        {{/IsAggregateRoot}}
         {{#HasContextualPrimaryKeyColumns}}
         -- Contextual primary key
             {{#ContextualPrimaryKeyColumns}}
-        , {{ColumnName}}
+        AND target.{{ColumnName}} = source.{{ColumnName}}
             {{/ContextualPrimaryKeyColumns}}
         {{/HasContextualPrimaryKeyColumns}}
-        {{#HasNonKeyColumns}}
-        -- Attributes
-            {{#NonKeyColumns}}
-        , {{ColumnName}}
-            {{/NonKeyColumns}}
-        {{/HasNonKeyColumns}}
-        {{#HasReferences}}
-        -- References
-            {{#References}}
-        , HASHBYTES('sha1', 
-            {{#ReferenceColumns}}
-            {{^IsFirst}}+ '|' + {{/IsFirst}}{{> MultiYear_0025_PopulateTables__HashPart }}
-            {{/ReferenceColumns}}
-        )
-            {{/References}}
-        {{/HasReferences}}
-        -- Boilerplate columns
+    {{/IsAggregateRoot}}
+    )
+    WHEN MATCHED THEN
+        UPDATE SET
+    {{#HasBoilerplateColumns}}
+            -- Boilerplate columns
         {{#BoilerplateColumns}}
-        , {{ColumnName}}
+            {{^IsFirst}}, {{/IsFirst}}{{ColumnName}} = source.{{ColumnName}}
         {{/BoilerplateColumns}}
-    FROM EdFi_Ods_Populated_Template.{{Schema}}.{{TableName}}
+    {{/HasBoilerplateColumns}}
+    {{#HasNonKeyColumns}}
+            -- Attributes
+        {{#NonKeyColumns}}
+            {{#HasBoilerplateColumns}}, {{/HasBoilerplateColumns}}{{^HasBoilerplateColumns}}{{^IsFirst}}, {{/IsFirst}}{{/HasBoilerplateColumns}}target.{{ColumnName}} = source.{{ColumnName}}
+        {{/NonKeyColumns}}
+    {{/HasNonKeyColumns}}
+    {{#HasReferences}}
+            -- References
+        {{#References}}
+            {{#HasBoilerplateColumns}}, {{/HasBoilerplateColumns}}{{^HasBoilerplateColumns}}{{#HasNonKeyColumns}}, {{/HasNonKeyColumns}}{{^HasNonKeyColumns}}{{^IsFirst}}, {{/IsFirst}}{{/HasNonKeyColumns}}{{/HasBoilerplateColumns}}target.{{#Column}}{{ColumnName}}{{/Column}} = HASHBYTES('sha1', 
+            {{#ReferenceColumns}}
+                {{^IsFirst}}+ '|' + {{/IsFirst}}{{> MultiYear_0025_PopulateTables__HashPartFromSource }}
+            {{/ReferenceColumns}}
+            )
+        {{/References}}
+    {{/HasReferences}}
+    WHEN NOT MATCHED THEN
+        INSERT (
+            HashKey
+            , SchoolYearContext
+    {{^IsAggregateRoot}}
+            -- Identifying references
+        {{#IdentifyingReferences}}
+                {{#Column}}
+            , {{ColumnName}}
+                {{/Column}}
+        {{/IdentifyingReferences}}
+    {{/IsAggregateRoot}}
+    {{#HasContextualPrimaryKeyColumns}}
+            -- Contextual primary key
+        {{#ContextualPrimaryKeyColumns}}
+            , {{ColumnName}}
+        {{/ContextualPrimaryKeyColumns}}
+    {{/HasContextualPrimaryKeyColumns}}
+    {{#HasNonKeyColumns}}
+            -- Attributes
+        {{#NonKeyColumns}}
+            , {{ColumnName}}
+        {{/NonKeyColumns}}
+    {{/HasNonKeyColumns}}
+    {{#HasReferences}}
+            -- References
+        {{#References}}
+                    {{#Column}}
+            , {{ColumnName}}
+                    {{/Column}}
+        {{/References}}
+    {{/HasReferences}}
+            -- Boilerplate columns
+    {{#BoilerplateColumns}}
+            , {{ColumnName}}
+    {{/BoilerplateColumns}}
+        )
+        VALUES (
+            HASHBYTES('sha1', 
+    {{#ParentPrimaryKeyColumns}}
+                {{^IsFirst}}+ '|' + {{/IsFirst}}{{> MultiYear_0025_PopulateTables__HashPartFromSource }}
+    {{/ParentPrimaryKeyColumns}}
+            )
+            , @schoolYearContext
+    {{^IsAggregateRoot}}
+            -- Identifying references
+        {{#IdentifyingReferences}}
+            , HASHBYTES('sha1', 
+                {{#ReferenceColumns}}
+                {{^IsFirst}}+ '|' + {{/IsFirst}}{{> MultiYear_0025_PopulateTables__HashPartFromSource }}
+                {{/ReferenceColumns}}
+            )
+        {{/IdentifyingReferences}}
+    {{/IsAggregateRoot}}
+    {{#HasContextualPrimaryKeyColumns}}
+            -- Contextual primary key
+        {{#ContextualPrimaryKeyColumns}}
+            , {{ColumnName}}
+        {{/ContextualPrimaryKeyColumns}}
+    {{/HasContextualPrimaryKeyColumns}}
+    {{#HasNonKeyColumns}}
+            -- Attributes
+        {{#NonKeyColumns}}
+            , {{ColumnName}}
+        {{/NonKeyColumns}}
+    {{/HasNonKeyColumns}}
+    {{#HasReferences}}
+            -- References
+        {{#References}}
+            , HASHBYTES('sha1', 
+            {{#ReferenceColumns}}
+                {{^IsFirst}}+ '|' + {{/IsFirst}}{{> MultiYear_0025_PopulateTables__HashPartFromSource }}
+            {{/ReferenceColumns}}
+            )
+        {{/References}}
+    {{/HasReferences}}
+            -- Boilerplate columns
+    {{#BoilerplateColumns}}
+            , {{ColumnName}}
+    {{/BoilerplateColumns}}
+        );
