--- a/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/MultiYear_0020_Tables__AttributeTable.mustache
+++ b/Utilities/CodeGeneration/EdFi.Ods.CodeGen/Mustache/MultiYear_0020_Tables__AttributeTable.mustache
@@ -3,16 +3,18 @@
         , SchoolYearContext int NOT NULL
         {{^IsAggregateRoot}}
         -- Identifying references
-        {{#IdentifyingReferences}}
-            {{#Column}}
+            {{#IdentifyingReferences}}
+                {{#Column}}
         , {{ColumnName}} {{DataType}} {{^IsNullable}}NOT {{/IsNullable}}NULL
-            {{/Column}}
-        {{/IdentifyingReferences}}
+                {{/Column}}
+            {{/IdentifyingReferences}}
+            {{#HasContextualPrimaryKeyColumns}}
         -- Contextual primary key
-        {{/IsAggregateRoot}}
-        {{#ContextualPrimaryKeyColumns}}
+                {{#ContextualPrimaryKeyColumns}}
         , {{ColumnName}} {{DataType}} {{^IsNullable}}NOT {{/IsNullable}}NULL
-        {{/ContextualPrimaryKeyColumns}}
+                {{/ContextualPrimaryKeyColumns}}
+            {{/HasContextualPrimaryKeyColumns}}
+        {{/IsAggregateRoot}}
         {{#HasNonKeyColumns}}
         -- Attributes
         {{/HasNonKeyColumns}}
@@ -27,11 +29,17 @@
         , {{ColumnName}} {{DataType}} {{^IsNullable}}NOT {{/IsNullable}}NULL
             {{/Column}}
         {{/References}}
+        {{#HasBoilerplateColumns}}
         -- Boilerplate
-        {{#BoilerplateColumns}}
+            {{#BoilerplateColumns}}
         , {{ColumnName}} {{DataType}} {{^IsNullable}}NOT {{/IsNullable}}NULL
-        {{/BoilerplateColumns}}
-        -- Constraints
+            {{/BoilerplateColumns}}
+        {{/HasBoilerplateColumns}}
+        -- Temporal table artifacts
+        , SysStartTime DATETIME2 GENERATED ALWAYS AS ROW START NOT NULL
+        , SysEndTime DATETIME2 GENERATED ALWAYS AS ROW END NOT NULL
+        , PERIOD FOR SYSTEM_TIME (SysStartTime, SysEndTime)
+        -- Primary Key Constraint
         , CONSTRAINT {{TableName}}_Attributes_PK PRIMARY KEY CLUSTERED (
             HashKey ASC
             , SchoolYearContext ASC
@@ -40,4 +48,5 @@
         {{/ContextualPrimaryKeyColumns}}
         ) WITH (PAD_INDEX = OFF, STATISTICS_NORECOMPUTE = OFF, IGNORE_DUP_KEY = OFF, ALLOW_ROW_LOCKS = ON, ALLOW_PAGE_LOCKS = ON) ON [PRIMARY]
         ) ON [PRIMARY]
+        WITH (SYSTEM_VERSIONING = ON (HISTORY_TABLE = {{Schema}}.{{TableName}}_AttributesHistory))
     GO
